fixed arrow link spacing

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -468,7 +468,7 @@ nav {
           color: $new;
         }
         a.arrow-link {
-          flex-grow: 1;
+          // flex-grow: 1;
           * {
             display:flex;
             align-items: center;
